--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,19 +23,12 @@ index-cli = "indexpy.cli:index_cli"
 [tool.poetry.dependencies]
 python = "^3.7"
 
-click = "^7.1.2"
-gunicorn = {version = "*", optional = true}
-pydantic = "^1.6"
-python-multipart = "^0.0.5"
-requests = {version = "^2.24.0", optional = true}
-starlette = "^0.13.6"
-typing-extensions = {version = "^3.7.4", python = "<3.8"}
-uvicorn = {version = "*", optional = true}
+baize = {version = "^0.4.1", extras = ["multipart"]}
+click = {version = "^7.1.2", optional = true}
+pydantic = "^1.8"
 
 [tool.poetry.extras]
-full = ["uvicorn", "gunicorn", "requests"]
-serve = ["gunicorn", "uvicorn"] # for 'index-cli serve && index-cli gunicorn'
-test = ["requests"] # include all dependencies for test
+cli = ["click"] # for index-cli commands
 
 [tool.poetry.dev-dependencies]
 flake8 = "*"
@@ -45,6 +38,7 @@ black = {version = "*", allow-prereleases = true}
 isort = "*"
 
 # for tests
+async-asgi-testclient = "^1.4.6"
 pytest = "^5.4.2"
 pytest-asyncio = "^0.12"
 pytest-cov = "^2.8.1"
@@ -53,9 +47,8 @@ pytest-cov = "^2.8.1"
 mkdocs = "*"
 mkdocs-material = "*"
 
-[tool.dephell.main]
-from = {format = "poetry", path = "pyproject.toml"}
-to = {format = "setuppy", path = "setup.py"}
+[tool.isort]
+profile = "black"
 
 [tool.coverage.run]
 omit = ["*/.venv/*", "*/tests/*"]
