--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,24 +10,43 @@ use_directory_urls: true
 theme:
   name: "material"
   language: "zh"
-  feature:
-    tabs: true
+  palette:
+    accent: teal
+  font:
+    code: Fira Code
+  icon:
+    admonition:
+      note: octicons/tag-16
+      abstract: octicons/checklist-16
+      info: octicons/info-16
+      tip: octicons/squirrel-16
+      success: octicons/check-16
+      question: octicons/question-16
+      warning: octicons/alert-16
+      failure: octicons/x-circle-16
+      danger: octicons/zap-16
+      bug: octicons/bug-16
+      example: octicons/beaker-16
+      quote: octicons/quote-16
 
 nav:
   - 概览: "index.md"
   - Route: route.md
-  - HTTP: "http.md"
+  - Http: "http.md"
   - WebSocket: "websocket.md"
   - Lifespan: "event.md"
-  - Middleware: "middleware.md"
   - OpenAPI: "openapi.md"
   - Command: "command.md"
 
 markdown_extensions:
   - admonition
   - extra
-  - pymdownx.highlight
+  - pymdownx.highlight:
+      linenums: true
   - pymdownx.superfences
+  - pymdownx.details
 
 plugins:
   - search
+
+copyright: Copyright &copy; <a href="https://abersheeran.com">AberSh</a>
