Change docs branch to gh-pages

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -69,7 +69,7 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          BRANCH: docs
+          BRANCH: gh-pages
           FOLDER: site
 
   push-to-mirror:
