--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,7 @@ exclude_lines = [
   "assert False",
   "if typing.TYPE_CHECKING:",
   "if TYPE_CHECKING:",
+  "pass",
 ]
 show_missing = true
 skip_covered = true
