--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,7 +51,7 @@ jobs:
           directory: ./coverage/reports/
           flags: unittests
           env_vars: OS,PYTHON
-          fail_ci_if_error: true
+          fail_ci_if_error: false
           path_to_write_report: ./coverage/codecov_report.txt
           verbose: true
 
