--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,5 +2,5 @@
 blank_issues_enabled: true
 contact_links:
   - name: Question
-    url: /discussions
+    url: https://github.com/abersheeran/index.py/discussions
     about: Ask a question
