--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -59,7 +59,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip mkdocs mkdocs-material mkdocs-version
+          python -m pip install --upgrade pip poetry
+          poetry config virtualenvs.create false --local
+          poetry install -E docs
 
       - name: Build
         run: |
