--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,7 @@ mkdocs-static-i18n = "^0.16"
 profile = "black"
 
 [tool.coverage.run]
-omit = ["*/.venv/*", "*/tests/*", "indexpy/cli.py"]
+omit = ["*/.venv/*", "*/tests/*", "indexpy/status.py", "indexpy/cli.py"]
 
 [tool.coverage.report]
 exclude_lines = [
