--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,4 +83,4 @@ jobs:
 
       - name: Publish
         run: |
-          poetry publish --username AberSheeran --password ${{ secrets.PYPIPASS }}
+          poetry publish --username __token__ --password ${{ secrets.PYPI_API_TOKEN }}
