--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -70,9 +70,8 @@ jobs:
           echo "index-py.aber.sh" > CNAME
 
       - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@releases/v3
+        uses: JamesIves/github-pages-deploy-action@4.1.4
         with:
-          ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages
           FOLDER: site
 
