--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ packages = [
 ]
 readme = "README.md"
 repository = "https://github.com/abersheeran/index.py"
-version = "0.18.7"
+version = "0.19.0rc1"
 
 [tool.poetry.scripts]
 index-cli = "indexpy.cli:index_cli"
