--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -43,25 +43,11 @@ body:
     validations:
       required: false
   - type: textarea
-    id: notes
-    attributes:
-      label: Debugging material
-      description: |
-        Any tracebacks, screenshots, etc. that can help understanding the problem.
-        NOTE:
-        - Please list tracebacks in full (don't truncate them).
-        - If relevant, consider turning on DEBUG or TRACE logs for additional details (see the Logging section on https://www.uvicorn.org/settings/ specifically the `log-level` flag).
-        - Consider using `<details>` to make tracebacks/logs collapsible if they're very large (see https://gist.github.com/ericclemmons/b146fe5da72ca1f706b2ef72a20ac39d).
-    validations:
-      required: false
-  - type: textarea
     id: environment
     attributes:
       label: Environment
       description: Describe your environment.
-      placeholder: |
-        - OS / Python / Uvicorn version: just run `uvicorn --version`
-        - The exact command you're running uvicorn with, all flags you passed included. If you run it with gunicorn please do the same. If there is a reverse-proxy involved and you cannot reproduce without it please give the minimal config of it to reproduce.
+      placeholder: OS / Python / Index.py version
     validations:
       required: true
   - type: textarea
