--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,7 +55,13 @@ mkdocs-static-i18n = "^0.16"
 profile = "black"
 
 [tool.coverage.run]
-omit = ["*/.venv/*", "*/tests/*", "indexpy/status.py", "indexpy/cli.py"]
+omit = [
+  "*/.venv/*",
+  "*/tests/*",
+  "indexpy/status.py",
+  "indexpy/cli.py",
+  "indexpy/routing/commands.py",
+]
 
 [tool.coverage.report]
 exclude_lines = [
