--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ index-cli = "indexpy.cli:index_cli"
 [tool.poetry.dependencies]
 python = "^3.7"
 
-baize = {version = "^0.10.0", extras = ["multipart"]}
+baize = "^0.11.0"
 click = {version = "^8.0", optional = true}
 pydantic = "^1.8"
 typing-extensions = "^3.10.0"
