--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,14 +7,20 @@ on:
     tags:
       - "*"
     paths:
+      - ".github/workflows/ci.yml"
       - "**.py"
       - "!indexpy/__version__.py"
+      - poetry.lock
+      - pyproject.toml
   pull_request:
     branches:
       - master
     paths:
+      - ".github/workflows/ci.yml"
       - "**.py"
       - "!indexpy/__version__.py"
+      - poetry.lock
+      - pyproject.toml
 
 jobs:
   tests:
