--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,14 +7,18 @@ on:
     tags:
       - "*"
     paths:
+      - ".github/workflows/ci.yml"
       - "**.py"
       - "!indexpy/__version__.py"
+      - poetry.lock
   pull_request:
     branches:
       - master
     paths:
+      - ".github/workflows/ci.yml"
       - "**.py"
       - "!indexpy/__version__.py"
+      - poetry.lock
 
 jobs:
   tests:
@@ -22,7 +26,7 @@ jobs:
     runs-on: "${{ matrix.os }}"
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.7, 3.8, 3.9, "3.10"]
         os: [windows-latest, ubuntu-latest, macos-latest]
     env:
       OS: ${{ matrix.os }}
