--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,12 +43,14 @@ jobs:
           cache: true
       - name: Install dependencies
         run: pdm sync
-      - name: Export executable path
-        run: export PATH=$PATH:$(pdm info --packages)/bin
       - name: Static type and format checking
-        run: python script/check.py
+        run: |
+          export PATH=$PATH:$(pdm info --packages)/bin
+          python script/check.py
       - name: Generate coverage report
-        run: pytest --cov=./ --cov-report=xml
+        run: |
+          export PATH=$PATH:$(pdm info --packages)/bin
+          pytest --cov=./ --cov-report=xml
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
