--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "An easy-to-use web framework."
 authors = [{ name = "abersheeran", email = "me@abersheeran.com" }]
 dependencies = [
     "baize<0.21.0,>=0.20.0",
-    "pydantic<2.0,>=1.8",
+    "pydantic>=2.0",
     "typing-extensions>=4.2.0",
 ]
 requires-python = ">=3.7,<4.0"
