--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,4 @@
-mkdocs[i18n]==1.4.2
-mkdocs-static-i18n==0.53
-mkdocs-material==9.0.11
+mkdocs[i18n]==1.5.3
+mkdocs-static-i18n[material]==1.2.0
+mkdocs-material==9.4.6
 jieba==0.42.1
