--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,15 +38,30 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           architecture: x64
-          version: 2.4.2
-          enable-pep582: true # Enable PEP 582 package loading globally
+          version: "2.10.4"
           cache: true
       - name: Install dependencies
         run: pdm sync
       - name: Static type and format checking
         run: |
           pdm run check
-      - name: Generate coverage report
+      - name: Run tests
+        run: |
+          pdm run test --cov=./kui --cov-report=xml tests
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
+        with:
+          files: ./coverage.xml
+          directory: ./coverage/reports/
+          flags: unittests
+          env_vars: OS,PYTHON
+          fail_ci_if_error: false
+          path_to_write_report: ./coverage/codecov_report.txt
+          verbose: true
+      - name: Install pydantic v1
+        run: |
+          pdm add pydantic==1.10.*
+      - name: Run tests
         run: |
           pdm run test --cov=./kui --cov-report=xml tests
       - name: Upload coverage to Codecov
@@ -78,8 +93,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           architecture: x64
-          version: 2.4.2
-          enable-pep582: true # Enable PEP 582 package loading globally
+          version: "2.10.4"
           cache: true
 
       - name: Publish
