--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,19 +26,19 @@ jobs:
     runs-on: "${{ matrix.os }}"
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9, "3.10", "3.11", "3.12"]
+        python-version: [3.9, "3.10", "3.11", "3.12", "3.13"]
         os: [ubuntu-latest]
     env:
       OS: ${{ matrix.os }}
       PYTHON: ${{ matrix.python-version }}
     steps:
-      - uses: actions/checkout@v2
-      - uses: pdm-project/setup-pdm@v3
+      - uses: actions/checkout@v4
+      - uses: pdm-project/setup-pdm@v4
         name: Setup Python and PDM
         with:
           python-version: ${{ matrix.python-version }}
           architecture: x64
-          version: "2.10.4"
+          version: "2.22.4"
           cache: true
       - name: Install dependencies
         run: pdm sync
@@ -66,14 +66,14 @@ jobs:
         os: [ubuntu-latest]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-      - uses: pdm-project/setup-pdm@v3
+      - uses: pdm-project/setup-pdm@v4
         name: Setup Python and PDM
         with:
           python-version: ${{ matrix.python-version }}
           architecture: x64
-          version: "2.10.4"
+          version: "2.22.4"
           cache: true
 
       - name: Publish
