--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ test = [
     "pytest-asyncio>=0.20.3",
     "pytest-cov>=4.0.0",
     "httpx>=0.23.3",
+    "httpx-ws>=0.7.2",
 ]
 
 [tool.pdm.build]
